[package]
name = "shawshank"
description = "An efficient, generic internment structure."
version = "0.2.1"
authors = ["Samuel Fredrickson <kinghajj@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://kinghajj.github.io/shawshank/shawshank/index.html"
repository = "https://github.com/kinghajj/shawshank"
keywords = ["string", "intern", "interning"]
build = "build.rs"

[features]
unstable = []

[dependencies]
num-traits = "0.1"
stable_deref_trait = "1.0"

[dev-dependencies]
rand = "0.3"
skeptic = "0.10"

[build-dependencies]
skeptic = "0.10"
